--- a/configuration/.env
+++ b/configuration/.env
@@ -1,1 +1,2 @@
-JETON_API = "$trotskitueleski1917"
+JETON_API="$trotskitueleski1917"
+URL_RAW="https://minio.lab.sspcloud.fr/mmeyer/ensae-reproductibilite/data/raw/data.csv"
