--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,7 +23,7 @@ jobs:
           architecture: 'x64'
       - name: Install dependencies
         run:
-            python -m pip install --upgrade pip setuptools wheel
+            python -m pip install --upgrade
             pip install -r requirements.txt
             pip install pylint
       - name: Check code formatting with Pylint
@@ -31,3 +31,5 @@ jobs:
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
+    #   - name: Build and push Docker image
+    #     run:
