--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -28,4 +28,4 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: linogaliana/application:latest
+          tags: marie678/application:latest
